syntax = "proto3";

option java_package = "org.app.auth_service.grpc";
option java_multiple_files = true;

service NotificationService {
  rpc SendEmail (EmailRequest) returns (EmailResponse);
}

message EmailRequest {
  string to = 1;
  string subject = 2;
  string body = 3;
}

message EmailResponse {
  bool success = 1;
  string message = 2;
}
